cleanup(french): fixed incorrect code style